# wk9-opcua-modbus

./: Cargo.toml  NOTES.md  README.md  STATUS.md  SUMMARY.md  TODO.md  TROUBLESHOOTING.md  USERGUIDE.md  build.rs  memory.x  opcua_modbus_gateway.py  test_both_boards.py  test_opcua_client.py
.cargo/: config.toml
src/: common.rs  modbus_1.rs  modbus_2.rs
